# unimeta

./: .coveragerc  .env  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  README.rst  changelog.md  pyproject.toml  requirements.txt  roadmap.md  setup.py
docs/: design#1.md
tests/: hr-schema-mysql.sql  test_pipeline.py  test_sql.py
unimeta/: __init__.py  event.py  fake.py  metaserver.py  model.py  mysql2ch.py  pipeline.py  table.py
unimeta/libs/: libformat.py  liburl.py
